--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,10 @@ bind -T off F12 \
   set -u key-table on\;\
   refresh-client -S
 
+dark_gray='#282a36'
+green='#50fa7b'
+yellow='#f1fa8c'
+
 #list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
